kubernetes/workloads/cilium/manifests/overlays/fh/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    implementation: kube-vip
    io.cilium.gateway/owning-gateway: cilium-https-gateway
  name: cilium-gateway-cilium-https-gateway
  namespace: cilium
spec:
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerClass: kube-vip.io/kube-vip-class
  externalTrafficPolicy: Cluster
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
    - name: port-443
      port: 443
      protocol: TCP
      targetPort: 443
  type: LoadBalancer
