kubernetes/workloads/cilium/manifests/overlays/fh/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-https-gateway
  namespace: cilium
spec:
  gatewayClassName: kube-vip
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      protocol: TLS
      tls:
        mode: Passthrough
      port: 443
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      protocol: HTTP
      port: 80
