kubernetes/workloads/cilium/manifests/overlays/fh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.cilium.io/force-https: enabled
  labels:
    app.kubernetes.io/instance: hubble-ui
  name: hubble-ingress
  namespace: cilium
spec:
  ingressClassName: cilium
  rules:
    - host: hubble.fh.dronen.house
      http:
        paths:
          - backend:
              service:
                name: hubble-ui
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hubble.fh.dronen.house
      secretName: hubble-server-tls
